# aoc-python-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: README.md  justfile  pyproject.toml
{{cookiecutter.project_name}}/aoc/: bench_cli.py  cli.py
{{cookiecutter.project_name}}/ci/: build-task.yaml
{{cookiecutter.project_name}}/ci/scripts/: install.sh
{{cookiecutter.project_name}}/scripts/: new.sh
{{cookiecutter.project_name}}/tests/: template.py  test_day01.py
